--- a/authentication_backend_service/package.json
+++ b/authentication_backend_service/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
+	"cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "joi": "^17.11.0",
